# truthkeeper

./: .gitignore  LICENSE  README.md
backend/: .gcloudignore  Procfile  README.md  pyproject.toml
backend/src/truthkeeper/: __init__.py  config.py  health.py  main.py
backend/src/truthkeeper/actions/: __init__.py  dispatch.py  hubspot.py  result.py  salesforce.py  stripe.py
backend/src/truthkeeper/api/: __init__.py  approvals.py  companies.py  onboarding.py
backend/src/truthkeeper/db/: __init__.py  bootstrap.py  models.py  session.py
backend/src/truthkeeper/onboarding/: __init__.py  agents.py  bigquery_profile.py  cli.py  mcp_tools.py  pipeline.py  proposal.py
backend/src/truthkeeper/reasoning/: __init__.py  agent.py  bigquery.py  cli.py  orchestrator.py  output.py
backend/src/truthkeeper/spec/: __init__.py  demo.py  models.py
backend/tests/: test_action_dispatch.py  test_approvals_model.py  test_approve_endpoint.py  test_bigquery_profile.py  test_companies_api.py  test_db_bootstrap.py  test_db_models.py  test_health.py  test_onboarding_api.py  test_onboarding_proposal.py  test_reasoning.py  test_spec.py
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: DiscoveryView.tsx  OnboardingStepper.tsx  ProfilingView.tsx  ProposalView.tsx  ReviewView.tsx  ToggleRow.tsx  ViolationDetailDialog.tsx
frontend/app/onboarding/: page.tsx
frontend/lib/: api.ts  badges.tsx  types.ts
infra/: README.md  bigquery_setup.sh  fivetran_setup_notes.md  verify_discrepancies.sql
seed/: .env.example  README.md  pyproject.toml
seed/seed/: config.py  data.py  hubspot_client.py  models.py  orchestrator.py  salesforce_client.py  stripe_client.py  teardown.py
seed/tests/: test_models.py
validation/: .env.example  README.md  hello_mcp.py  hello_sequential.py  pyproject.toml
