[project]
name = "truthkeeper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "olcay.bilir", email = "olcay.bilir@digitalchargingsolutions.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
truthkeeper = "truthkeeper:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
