[project]
name = "truthkeeper"
version = "0.1.0"
description = "TruthKeeper backend — cross-system reconciliation agent for B2B operations."
authors = [
    { name = "olcay.bilir", email = "olcay.bilir@digitalchargingsolutions.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.33.0",
    "google-cloud-aiplatform>=1.153.1",
    "google-cloud-bigquery>=3.27.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "stripe>=11.0.0",
    "simple-salesforce>=1.12.6",
    "hubspot-api-client>=11.0.0",
]

[project.scripts]
truthkeeper = "truthkeeper:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.vercel]
entrypoint = "src.truthkeeper.main:app"
