[project]
name = "truthkeeper-seed"
version = "0.1.0"
description = "Deterministic seed data for the TruthKeeper demo — 50 customers across Salesforce/Stripe/HubSpot with 5 deliberate discrepancies."
authors = [
    { name = "olcay.bilir", email = "olcay.bilir@digitalchargingsolutions.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hubspot-api-client>=12.0.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "simple-salesforce>=1.12.9",
    "stripe>=15.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seed"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
