[project]
name = "validation"
version = "0.1.0"
description = "Throwaway harness that validates the ADK + Gemini 3 + Fivetran MCP integration end-to-end."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.33.0",
    "google-cloud-aiplatform>=1.153.1",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
]
